fix: drawer toggle not working on mobile

--- a/src/modules/admin/components/ModuleContainer/ModuleContainer.module.scss
+++ b/src/modules/admin/components/ModuleContainer/ModuleContainer.module.scss
@@ -1,13 +1,20 @@
 .section {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100%;
   margin: 0.5em 0;
-  .section-title {
+  .title {
     font-size: 2em;
     font-weight: 500;
     color: black;
+  }
+  .add {
+    color: white;
+    background-color: #00796b;
+    border-radius: 25%;
+    font-size: 1.5em;
+    padding: 10px;
   }
 }
 .divider {
@@ -18,6 +25,7 @@
   display: flex;
   flex-direction: column;
   padding: 2em 4em;
+  background-color: "#eff3f6"
 }
 
 .content {
@@ -25,5 +33,6 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-flow: row wrap;
-  margin: 0 -1em;
+  margin-top: 1em;
+  margin-left: -1em;
 }
